packages/cli/fixtures/logs/rust/compile-error-v1.txt
error[E0308]: mismatched types
 --> src/main.rs:15:20
  |
15 |     let result: i32 = "hello";
  |                 ---   ^^^^^^^ expected `i32`, found `&str`
  |                 |
  |                 expected due to this

error[E0425]: cannot find value `config` in this scope
 --> src/main.rs:22:5
  |
22 |     config.load();
  |     ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.